--- a/hm-dianping/src/main/resources/application.yaml
+++ b/hm-dianping/src/main/resources/application.yaml
@@ -9,9 +9,9 @@ spring:
     username: root
     password: 123456
   redis:
-    host: 192.168.150.101
+    host: 124.222.9.154
     port: 6379
-    password: 123321
+    password:
     lettuce:
       pool:
         max-active: 10
